--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.10.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.10.1",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.4",
     "react": "^18.3.1",
